# Druid

./: .gitignore  CMakeLists.txt  README.md
include/: cryptor.h  packer.h  stub.h
src/: chacha20.c  cryptor.c  packer.c  stub.c
